Disable Conekta initialization to fix registration CSRF token conflicts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Permisos Digitales</title>
 
-    <!-- Define conekta_antifraud_config_jsonp function before loading Conekta.js -->
+    <!-- Conekta.js loading disabled until live payments are implemented -->
+    <!--
     <script type="text/javascript">
       window.conekta_antifraud_config_jsonp = function(callback) {
         console.log("Anti-fraud config defined");
         callback({});
       };
     </script>
-
-    <!-- Load Conekta.js main library AFTER defining the antifraud config function -->
     <script type="text/javascript" src="https://cdn.conekta.io/js/latest/conekta.js"></script>
+    -->
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
